--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "custom-deploy": "node pages.js"
   },
   "eslintConfig": {
     "extends": "react-app"
