updated desc/homepage json info.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "sus-and-env",
+  "description": "Online space for the physical imlpementation of our project.",
+  "homepage": "https://helpushelp.earth/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
