--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-particles-js": "^3.4.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-tsparticles": "^1.18.8",
+    "react-typist": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
