--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
+    "react-hotjar": "^2.2.1",
     "react-particles-js": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
