--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-hotjar": "^2.2.1",
     "react-particles-js": "^3.4.0",
