--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "gh-pages": "^3.1.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-chartjs-2": "^2.11.1",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-hotjar": "^2.2.1",
