--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-dom": "^16.13.1",
     "react-hotjar": "^2.2.1",
     "react-particles-js": "^3.4.0",
+    "react-responsive": "^8.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-tabs": "^3.1.1",
     "react-tsparticles": "^1.18.8",
     "react-typist": "^2.0.5"
   },
