--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "gh-pages": "^3.1.0",
+    "mdpdf": "^2.1.2",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
